--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <title>Peer Chat</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic"></script>
   </head>
   <body>
     <div id="videos">
@@ -32,6 +34,6 @@
       </div>
     </div>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-    <script src="main.js"></script>
+    <script defer src="main.js"></script>
   </body>
 </html>
