feat: output read

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <title>Peer Chat</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic"></script> -->
   </head>
   <body>
     <div id="videos">
@@ -19,6 +19,7 @@
       ></video>
       <video class="video-player" id="user-2" autoplay playsinline></video>
     </div>
+    <div id="subtitle"></div>
 
     <div id="controls">
       <div class="control-container" id="camera-btn">
